noinst_LIBRARIES = libbard.a

AM_CFLAGS = @CFLAGS@	\
	-I$(top_srcdir)/lib/libgnu

libbard_a_SOURCES = \
	bt_bta.c	\
	bt_bta.h	\
	bt_btf.c	\
	bt_btf.h	\
	bt_common.c	\
	bt_string.c	\
	bt_string.h	\
	debug.h	\
	endian.c	\
	endian.h	\
	fileio.c	\
	fileio.h	\
	bt_zlib.h	\
	zlib.c		\
	fpio.c		\
	fpio.h		

libbard_a_CFLAGS = $(AM_CFLAGS)
