noinst_LIBRARIES = libcnv.a

AM_CFLAGS = @CFLAGS@ \
		-I../libbard 	\
		-I../libgnu	\
		-I../jansson

libcnv_a_SOURCES = \
	bigpic_gfx.c	\
	cnvlib.h	\
	d3comp.c	\
	dehuf.c		\
	dehuf.h		\
	cnv.h	\
	cnv_city.h	\
	cnv_city.c	\
	cnv_code.h	\
	cnv_common.h	\
	cnv_dun.h	\
	cnv_dun.c	\
	cnv_gfx.h	\
	cnv_gfx.c	\
	cnv_int.h	\
	cnv_item.h	\
	cnv_item.c	\
	cnv_mon.h	\
	cnv_mon.c	\
	cnv_spell.h	\
	cnv_spell.c	\
	cnv_trap.h	\
	cnv_list.h	\
	cnv_list.c	\
	cnv_class.h	\
	cnv_class.c	\
	cnv_race.h	\
	cnv_race.c	\
	bt_gfx.c	\
	bt_gfx.h	\
	cnv_effect.h	\
	cnv_effect.c	\
	common.c	\
	gfx_view.c	\
	trap.c	
	
libcnv_a_CFLAGS = $(AM_CFLAGS)
